Added dashboards microservice

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,7 @@
 /pip-services-imagesets-node
 /pip-clients-imagesets-node
 
+/pip-services-dashboards-node
+/pip-clients-dashboards-node
+
 /pip-facade-content-node
