Added pip-services-help microservice

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@
 /pip-services-guides-node
 /pip-clients-guides-node
 
+/pip-services-help-node
+/pip-clients-help-node
+
 /pip-services-imagesets-node
 /pip-clients-imagesets-node
 
