--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 /pip-services-attachments-node
 /pip-clients-attachments-node
 
+/pip-services-applications-node
+/pip-clients-applications-node
+
 /pip-services-tips-node
 /pip-clients-tips-node
 
