Set universal ignore pattern

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,1 @@
-/pip-services-devenv
-
-/pip-services-quotes-node
-/pip-clients-quotes-node
-/pip-clients-quotes-dotnet
-/pip-clients-quotes-java
-/pip-clients-quotes-go
-/pip-clients-quotes-python
-
-/pip-services-tags-node
-/pip-clients-tags-node
-
-/pip-services-msgtemplates-node
-/pip-clients-msgtemplates-node
-
-/pip-services-files-node
-/pip-clients-files-node
-
-/pip-services-attachments-node
-/pip-clients-attachments-node
-
-/pip-services-applications-node
-/pip-clients-applications-node
-
-/pip-services-tips-node
-/pip-clients-tips-node
-
-/pip-services-guides-node
-/pip-clients-guides-node
-
-/pip-services-help-node
-/pip-clients-help-node
-
-/pip-services-imagesets-node
-/pip-clients-imagesets-node
-
-/pip-services-dashboards-node
-/pip-clients-dashboards-node
-
-/pip-facade-content-node
+/pip-*
